Add success message on register

--- a/src/main/webapp/pages/register.xhtml
+++ b/src/main/webapp/pages/register.xhtml
@@ -66,6 +66,7 @@
 		</p:dialog>
 		<ui:include src="successDialog.xhtml">
 			<ui:param name="successMessage" value="User was created successfully!" />
+			<ui:param name="hideDialog" value="registerPanel" />
 		</ui:include>
 	</ui:define>
 </ui:composition>
