--- a/src/main/webapp/pages/clb.xhtml
+++ b/src/main/webapp/pages/clb.xhtml
@@ -60,7 +60,7 @@
 								<p:column>
 									<p:gmap id="gmap" center="36.890257,30.707417" zoom="13"
 										type="HYBRID" style="width:100%;height:400px"
-										model="#{clbHomeBean.mapModel}" onPointClick=""
+										model="#{clbUserBean.mapModel}" onPointClick=""
 										widgetVar="map" />
 								</p:column>
 							</h:panelGrid>
