--- a/src/main/webapp/pages/index.xhtml
+++ b/src/main/webapp/pages/index.xhtml
@@ -10,54 +10,62 @@
 	<ui:define name="body">
 		<div class="homeMainDivClass">
 			<h:form id="bannerForm">
-					<table width="100%" class="homeMainDivBannerClass">
-						<tr>
-							<td width="1%"></td>
-							<td align="left" valign="middle"><p:outputLabel
-									styleClass="logoClass">LEnergy Logo</p:outputLabel></td>
-							<td align="right" valign="top">
-								<h:panelGrid columns="11"
-									styleClass="homeMainDivBannerClass">
-									<p:column>
-										<p:outputLabel for="emailUser">Username:</p:outputLabel>
-									</p:column>
-									<p:column>
-										<p:spacer width="2" />
-									</p:column>
-									<p:column>
-										<p:inputText id="emailUser" label="emailUser" />
-									</p:column>
-									<p:column>
-										<p:spacer width="30" />
-									</p:column>
-									<p:column>
-										<p:outputLabel for="passwordUser">Password:</p:outputLabel>
-									</p:column>
-									<p:column>
-										<p:spacer width="2" />
-									</p:column>
-									<p:column>
-										<p:inputText label="passwordUser" id="passwordUser"
-											type="password" />
-									</p:column>
-									<p:column>
-										<p:spacer width="40" />
-									</p:column>
-									<p:column>
-										<p:commandButton styleClass="signButton" value="Log In"
-											action="#{clbHomeBean.loginUser}" ajax="false" type="submit"></p:commandButton>
-									</p:column>
-									<p:column>
-										<p:spacer width="5" />
-									</p:column>
-									<p:column>
-										<p:commandButton styleClass="signButton" value="Sign Up" ajax="true" oncomplete="PF('registerPanel').show()"></p:commandButton>
-									</p:column>
-								</h:panelGrid></td>
-						</tr>
-					</table>
+				<table width="100%" class="homeMainDivBannerClass">
+					<tr>
+						<td width="1%"></td>
+						<td align="left" valign="middle"><p:outputLabel
+								styleClass="logoClass">LEnergy Logo</p:outputLabel></td>
+						<td align="right" valign="top"><h:panelGrid columns="11"
+								styleClass="homeMainDivBannerClass">
+								<p:column>
+									<p:outputLabel for="emailUser">Username:</p:outputLabel>
+								</p:column>
+								<p:column>
+									<p:spacer width="2" />
+								</p:column>
+								<p:column>
+									<p:inputText id="emailUser" label="emailUser"
+										value="#{clbHomeLoginBean.userName}" />
+								</p:column>
+								<p:column>
+									<p:spacer width="30" />
+								</p:column>
+								<p:column>
+									<p:outputLabel for="passwordUser">Password:</p:outputLabel>
+								</p:column>
+								<p:column>
+									<p:spacer width="2" />
+								</p:column>
+								<p:column>
+									<p:inputText label="passwordUser" id="passwordUser"
+										value="#{clbHomeLoginBean.password}" type="password" />
+								</p:column>
+								<p:column>
+									<p:spacer width="40" />
+								</p:column>
+								<p:column>
+									<p:commandButton styleClass="signButton" value="Log In"
+										action="#{clbHomeLoginBean.loginUser}" ajax="true"
+										update="@form"
+										oncomplete="if (args.cantLogin === true ){ PF('unSuccessPanel').show()}"></p:commandButton>
+								</p:column>
+								<p:column>
+									<p:spacer width="5" />
+								</p:column>
+								<p:column>
+									<p:commandButton styleClass="signButton" value="Sign Up"
+										ajax="true" oncomplete="PF('registerPanel').show()"></p:commandButton>
+								</p:column>
+							</h:panelGrid></td>
+					</tr>
+				</table>
 			</h:form>
 		</div>
 		<ui:include src="register.xhtml" />
+		<ui:include src="unSuccessDialog.xhtml">
+			<ui:param name="unSuccessMessage"
+				value="User does not exist!" />
+			<ui:param name="hideDialog" value="registerPanel" />
+		</ui:include>
 	</ui:define>
 </ui:composition>
