--- a/src/main/webapp/pages/clb.xhtml
+++ b/src/main/webapp/pages/clb.xhtml
@@ -8,66 +8,82 @@
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	template="template/ui.xhtml">
 	<ui:define name="body">
-		<div class="mainDivClass">
-			<table width="100%" cellspacing="5">
+		<h:form id="bannerForm">
+			<table width="100%" class="homeMainDivBannerClass">
 				<tr>
-					<td width="200px" valign="top"><h:form>
-							<p:commandButton styleClass="menuButton" value="Dashboard"></p:commandButton>
-							<p:spacer height="5" />
-							<p:commandButton styleClass="menuButton" value="Analysis"></p:commandButton>
-							<p:spacer height="5" />
-							<p:commandButton styleClass="menuButton"
-								value="Building Management"></p:commandButton>
-							<p:spacer height="5" />
-							<p:commandButton styleClass="menuButton" value="Forum"></p:commandButton>
-							<p:spacer height="5" />
-							<p:commandButton styleClass="menuButton" value="Account"></p:commandButton>
-						</h:form></td>
-					<td valign="top"><p:panel widgetVar="mainPanel" id="mainPanel">
-							<h:panelGrid width="100%" columns="2" 
-								columnClasses="mainPanelCol1, mainPanelCol2" cellspacing="10">
-								<p:column>
-									<div align="left" class="mainDivDetail">
-										<div align="right" class="mainDivDetailDate">
-											<h:outputLabel value="Last entry date: 06/11/2017 at 23:25"></h:outputLabel>
-										</div>
-										<h:outputText value="Building 1" class="mainDivDetailTitle" />
-										<br /> <br />
-										<h:outputText value="- Monitor 1" class="mainDivDetailText" />
-										<br />
-										<h:outputText value="- Monitor 2" class="mainDivDetailText" />
-										<br />
-										<h:outputText value="- Monitor 3" class="mainDivDetailText" />
-										<br />
-										<h:outputText value="- Monitor 4" class="mainDivDetailText" />
-									</div>
-									<p:spacer height="3" />
-									<div align="left" class="mainDivDetail">
-										<div align="right" class="mainDivDetailDate">
-											<h:outputLabel value="Last entry date: 06/11/2017 at 23:25"></h:outputLabel>
-										</div>
-										<h:outputText value="Building 2" class="mainDivDetailTitle" />
-										<br /> <br />
-										<h:outputText value="- Monitor 1" class="mainDivDetailText" />
-										<br />
-										<h:outputText value="- Monitor 2" class="mainDivDetailText" />
-										<br />
-										<h:outputText value="- Monitor 3" class="mainDivDetailText" />
-										<br />
-										<h:outputText value="- Monitor 4" class="mainDivDetailText" />
-									</div>
-								</p:column>
-								<p:column>
-									<p:gmap id="gmap" center="36.890257,30.707417" zoom="13"
-										type="HYBRID" style="width:100%;height:400px"
-										model="#{clbUserBean.mapModel}" onPointClick=""
-										widgetVar="map" />
-								</p:column>
-							</h:panelGrid>
-						</p:panel>
-					</td>
+					<td width="1%"></td>
+					<td align="left" valign="middle"><p:outputLabel
+							styleClass="logoClass">LEnergy Logo</p:outputLabel></td>
+					<td align="right" valign="top"><h:panelGrid columns="1"
+							styleClass="homeMainDivBannerClass">
+							<p:column>
+								<p:commandButton styleClass="signButton" value="Log Out"
+									action="#{clbHomeLoginBean.logout}"></p:commandButton>
+							</p:column>
+						</h:panelGrid></td>
 				</tr>
 			</table>
-		</div>
+			<div class="mainDivClass">
+				<table width="100%" cellspacing="5">
+					<tr>
+						<td width="200px" valign="top"><h:form>
+								<p:commandButton styleClass="menuButton" value="Dashboard"></p:commandButton>
+								<p:spacer height="5" />
+								<p:commandButton styleClass="menuButton" value="Analysis"></p:commandButton>
+								<p:spacer height="5" />
+								<p:commandButton styleClass="menuButton"
+									value="Building Management"></p:commandButton>
+								<p:spacer height="5" />
+								<p:commandButton styleClass="menuButton" value="Forum"></p:commandButton>
+								<p:spacer height="5" />
+								<p:commandButton styleClass="menuButton" value="Account"></p:commandButton>
+							</h:form></td>
+						<td valign="top"><p:panel widgetVar="mainPanel"
+								id="mainPanel">
+								<h:panelGrid width="100%" columns="2"
+									columnClasses="mainPanelCol1, mainPanelCol2" cellspacing="10">
+									<p:column>
+										<div align="left" class="mainDivDetail">
+											<div align="right" class="mainDivDetailDate">
+												<h:outputLabel value="Last entry date: 06/11/2017 at 23:25"></h:outputLabel>
+											</div>
+											<h:outputText value="Building 1" class="mainDivDetailTitle" />
+											<br /> <br />
+											<h:outputText value="- Monitor 1" class="mainDivDetailText" />
+											<br />
+											<h:outputText value="- Monitor 2" class="mainDivDetailText" />
+											<br />
+											<h:outputText value="- Monitor 3" class="mainDivDetailText" />
+											<br />
+											<h:outputText value="- Monitor 4" class="mainDivDetailText" />
+										</div>
+										<p:spacer height="3" />
+										<div align="left" class="mainDivDetail">
+											<div align="right" class="mainDivDetailDate">
+												<h:outputLabel value="Last entry date: 06/11/2017 at 23:25"></h:outputLabel>
+											</div>
+											<h:outputText value="Building 2" class="mainDivDetailTitle" />
+											<br /> <br />
+											<h:outputText value="- Monitor 1" class="mainDivDetailText" />
+											<br />
+											<h:outputText value="- Monitor 2" class="mainDivDetailText" />
+											<br />
+											<h:outputText value="- Monitor 3" class="mainDivDetailText" />
+											<br />
+											<h:outputText value="- Monitor 4" class="mainDivDetailText" />
+										</div>
+									</p:column>
+									<p:column>
+										<p:gmap id="gmap" center="36.890257,30.707417" zoom="13"
+											type="HYBRID" style="width:100%;height:400px"
+											model="#{clbUserBean.mapModel}" onPointClick=""
+											widgetVar="map" />
+									</p:column>
+								</h:panelGrid>
+							</p:panel></td>
+					</tr>
+				</table>
+			</div>
+		</h:form>
 	</ui:define>
 </ui:composition>
