--- a/src/main/webapp/pages/index.xhtml
+++ b/src/main/webapp/pages/index.xhtml
@@ -15,7 +15,7 @@
 						<td width="1%"></td>
 						<td align="left" valign="middle"><p:outputLabel
 								styleClass="logoClass">LEnergy Logo</p:outputLabel></td>
-						<td align="right" valign="top"><h:panelGrid columns="11"
+						<td align="right" valign="top"><h:panelGrid columns="9"
 								styleClass="homeMainDivBannerClass">
 								<p:column>
 									<p:outputLabel for="emailUser">Username:</p:outputLabel>
@@ -44,27 +44,95 @@
 									<p:spacer width="40" />
 								</p:column>
 								<p:column>
-									<p:commandButton styleClass="signButton" value="Log In"
+									<p:commandButton styleClass="signButton" value="Sign In"
 										action="#{clbHomeLoginBean.loginUser}" ajax="true"
 										update="@form"
 										oncomplete="if (args.cantLogin === true ){ PF('unSuccessPanel').show()}"></p:commandButton>
-								</p:column>
-								<p:column>
-									<p:spacer width="5" />
-								</p:column>
-								<p:column>
-									<p:commandButton styleClass="signButton" value="Sign Up"
-										ajax="true" oncomplete="PF('registerPanel').show()"></p:commandButton>
 								</p:column>
 							</h:panelGrid></td>
 					</tr>
 				</table>
 			</h:form>
+			<p:spacer height="100"/>
+			<div align="center">
+				<h:form id="registerForm">
+					<p:panel header="Sign Up" styleClass="signUpPanel">
+						<p:spacer height="10"/>
+						<p:panelGrid columns="3" styleClass="mainTable">
+							<p:column>
+								<p:outputLabel>Name</p:outputLabel>
+							</p:column>
+							<p:column>
+								<p:inputText validatorMessage="Name too short!"
+									requiredMessage="Name is required!" id="nameUser"
+									value="#{clbHomeRegisterBean.user.name}" required="true"
+									label="nameUser">
+									<f:validateLength minimum="3"></f:validateLength>
+								</p:inputText>
+							</p:column>
+							<p:column>
+								<p:message for="nameUser" />
+							</p:column>
+							<p:column>
+								<p:outputLabel>Email</p:outputLabel>
+							</p:column>
+							<p:column>
+								<p:inputText requiredMessage="Email is required!"
+									validatorMessage="Email is not valid!"
+									value="#{clbHomeRegisterBean.user.username}" required="true"
+									label="emailUser" id="emailUser">
+									<f:validateRegex
+										pattern="([^.@]+)(\.[^.@]+)*@([^.@]+\.)+([^.@]+)" />
+								</p:inputText>
+							</p:column>
+							<p:column>
+								<p:message for="emailUser" />
+							</p:column>
+							<p:column>
+								<p:outputLabel>Password</p:outputLabel>
+							</p:column>
+							<p:column>
+								<p:inputText requiredMessage="Password is required!"
+									value="#{clbHomeRegisterBean.user.password}"
+									label="passwordUser" id="passwordUser" required="true"
+									type="password"
+									validatorMessage="Al least 6 characters are needed!">
+									<f:validateLength minimum="6"></f:validateLength>
+								</p:inputText>
+							</p:column>
+							<p:column>
+								<p:message for="passwordUser" />
+							</p:column>
+							<p:column>
+								<p:outputLabel>Address</p:outputLabel>
+							</p:column>
+							<p:column>
+								<p:inputTextarea rows="5"
+									value="#{clbHomeRegisterBean.user.address}"></p:inputTextarea>
+							</p:column>
+							<p:column>
+							</p:column>
+						</p:panelGrid>
+						<p:spacer height="25" />
+						<div align="center">
+							<p:commandButton
+								action="#{clbHomeRegisterBean.registerUserAccount}"
+								validateClient="true" styleClass="signButtonExtended" value="Register"
+								ajax="true"
+								oncomplete="if (!args.validationFailed){ PF('successPanel').show() }"
+								update="registerForm"></p:commandButton>
+						</div>
+					</p:panel>
+				</h:form>
+			</div>
 		</div>
-		<ui:include src="register.xhtml" />
+		<ui:include src="successDialog.xhtml">
+			<ui:param name="successMessage"
+				value="User was created successfully! Check your Email to Confirm Registration, if you dont receive an email in 24h please contact the staff." />
+			<ui:param name="hideDialog" value="registerPanel" />
+		</ui:include>
 		<ui:include src="unSuccessDialog.xhtml">
-			<ui:param name="unSuccessMessage"
-				value="User does not exist!" />
+			<ui:param name="unSuccessMessage" value="User does not exist!" />
 			<ui:param name="hideDialog" value="registerPanel" />
 		</ui:include>
 	</ui:define>
