Finish Login and Password Encode

--- a/src/main/webapp/pages/index.xhtml
+++ b/src/main/webapp/pages/index.xhtml
@@ -47,7 +47,15 @@
 									<p:commandButton styleClass="signButton" value="Sign In"
 										action="#{clbHomeLoginBean.loginUser}" ajax="true"
 										update="@form"
-										oncomplete="if (args.cantLogin === true ){ PF('unSuccessPaneldoesnexistUnsuccess').show()}"></p:commandButton>
+										oncomplete="if (args.cantLoginUserNotFound === true )
+													{ 
+														PF('unSuccessPaneldoesnexistUnsuccess').show();
+													}
+													if (args.cantLoginPasswordDoesntMatch === true)
+													{
+														PF('unSuccessPanelpasswordnotmatchUnsuccess').show();
+													}
+													"></p:commandButton>
 								</p:column>
 							</h:panelGrid></td>
 					</tr>
@@ -142,6 +150,10 @@
 		<ui:include src="./popups/unSuccessDialog.xhtml">
 			<ui:param name="idUnsuccess" value="doesnexistUnsuccess" />
 			<ui:param name="unSuccessMessage" value="User does not exist!" />
+		</ui:include>
+		<ui:include src="./popups/unSuccessDialog.xhtml">
+			<ui:param name="idUnsuccess" value="passwordnotmatchUnsuccess" />
+			<ui:param name="unSuccessMessage" value="User passwords didnt match" />
 		</ui:include>
 		<ui:include src="./popups/unSuccessDialog.xhtml">
 			<ui:param name="idUnsuccess" value="alexistsUnsuccess" />
