--- a/src/main/webapp/pages/popups/recoverPassword.xhtml
+++ b/src/main/webapp/pages/popups/recoverPassword.xhtml
@@ -8,28 +8,54 @@
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	template="../template/ui.xhtml">
 	<ui:define name="body">
-		<p:dialog widgetVar="recoverPassword" id="recoverPassword" modal="true"
-			position="center center" draggable="false" closable="true"
-			header="Recover Password" closeOnEscape="true" styleClass="logoClass"
-			resizable="false">
+		<p:dialog widgetVar="recoverPassword" id="recoverPassword"
+			modal="true" position="center center" draggable="false"
+			closable="true" header="Recover Password" closeOnEscape="true"
+			styleClass="logoClass" resizable="false">
 			<h:form>
 				<div class="recoverPasswordDiv">
-					<p:panelGrid columns="2" styleClass="successGrid">
+					<p:panelGrid columns="3" styleClass="successGrid">
 						<p:column>
 							<p:outputLabel styleClass="recoverPasswordDiv" for="emailUser">Username:</p:outputLabel>
 						</p:column>
 						<p:column>
-							<p:inputText styleClass="recoverPasswordDiv" id="emailUser" label="emailUser"
-								value="#{clbHomeRegisterBean.user.username}" />
+							<p:inputText styleClass="recoverPasswordDiv" id="emailUser" validatorMessage="User is not valid!"
+								label="emailUser" value="#{clbHomeRegisterBean.user.username}">
+								<f:validateRegex
+									pattern="[\w\.-]*[a-zA-Z0-9_]@[\w\.-]*[a-zA-Z0-9]\.[a-zA-Z][a-zA-Z\.]*[a-zA-Z]" />
+							</p:inputText>
+						</p:column>
+						<p:column>
+							<p:message for="emailUser" />
 						</p:column>
 					</p:panelGrid>
 					<br />
 					<div align="center">
 						<p:commandButton styleClass="signButton"
-							action="#{redirectBean.redirectTo(path)}" value="Recover"></p:commandButton>
+							action="#{clbHomeRegisterBean.recoverPassword}" value="Recover"
+							onstart="document.body.style.cursor = 'wait';"
+							oncomplete="
+									if (!args.validationFailed){ 
+										document.body.style.cursor = 'default';
+										if (args.cantRecoverPasswordNotFound=== true ){ 
+											PF('unSuccessPaneldoesnexistRecPassUnsuccess').show();
+										}
+										else PF('successPanelrecoverPass').show(); 
+									}"></p:commandButton>
 					</div>
 				</div>
 			</h:form>
 		</p:dialog>
+		<ui:include src="successDialog.xhtml">
+			<ui:param name="id" value="recoverPass" />
+			<ui:param name="successMessage"
+				value="The request for a new password was complete! Check your email to proceed new registration! If you dont receive an email in 24h please contact the staff." />
+			<ui:param name="path" value="index.xhtml?faces-redirect=true" />
+		</ui:include>
+		<ui:include src="unSuccessDialog.xhtml">
+			<ui:param name="idUnsuccess" value="doesnexistRecPassUnsuccess" />
+			<ui:param name="unSuccessMessage"
+				value="User does not exist to recover Password!" />
+		</ui:include>
 	</ui:define>
 </ui:composition>
