--- a/src/main/webapp/pages/popups/recoverPassword.xhtml
+++ b/src/main/webapp/pages/popups/recoverPassword.xhtml
@@ -33,10 +33,9 @@
 					<div align="center">
 						<p:commandButton styleClass="signButton"
 							action="#{clbHomeRegisterBean.recoverPassword}" value="Recover"
-							onstart="document.body.style.cursor = 'wait';"
+							onclick="document.body.style.cursor='wait'"
 							oncomplete="
 									if (!args.validationFailed){ 
-										document.body.style.cursor = 'default';
 										if (args.cantRecoverPasswordNotFound=== true ){ 
 											PF('unSuccessPaneldoesnexistRecPassUnsuccess').show();
 										}
