--- a/src/main/webapp/pages/popups/recoverPassword.xhtml
+++ b/src/main/webapp/pages/popups/recoverPassword.xhtml
@@ -32,12 +32,17 @@
 					<br />
 					<div align="center">
 						<p:commandButton styleClass="signButton"
-							action="#{clbHomeRegisterBean.recoverPassword}" value="Recover"
-							onclick="document.body.style.cursor='wait'"
+							action="#{clbHomeRegisterBean.recoverPassword}" value="Recover" 
+							ajax="true" update="@form"
+							onstart="document.body.style.cursor='wait'"
 							oncomplete="
+									document.body.style.cursor='default'
 									if (!args.validationFailed){ 
 										if (args.cantRecoverPasswordNotFound=== true ){ 
 											PF('unSuccessPaneldoesnexistRecPassUnsuccess').show();
+										}
+										else if (args.timeNotPassedLastEmail === true ){ 
+											PF('unSuccessPaneltimeNotPassedLastEmail').show();
 										}
 										else PF('successPanelrecoverPass').show(); 
 									}"></p:commandButton>
