--- a/src/main/webapp/pages/popups/recoverPassword.xhtml
+++ b/src/main/webapp/pages/popups/recoverPassword.xhtml
@@ -19,8 +19,9 @@
 							<p:outputLabel styleClass="recoverPasswordDiv" for="emailUser">Username:</p:outputLabel>
 						</p:column>
 						<p:column>
-							<p:inputText styleClass="recoverPasswordDiv" id="emailUser" validatorMessage="User is not valid!"
-								label="emailUser" value="#{clbHomeRegisterBean.user.username}">
+							<p:inputText styleClass="recoverPasswordDiv" id="emailUser"
+								validatorMessage="User is not valid!" label="emailUser"
+								value="#{clbHomeRegisterBean.user.username}">
 								<f:validateRegex
 									pattern="[\w\.-]*[a-zA-Z0-9_]@[\w\.-]*[a-zA-Z0-9]\.[a-zA-Z][a-zA-Z\.]*[a-zA-Z]" />
 							</p:inputText>
@@ -32,17 +33,17 @@
 					<br />
 					<div align="center">
 						<p:commandButton styleClass="signButton"
-							action="#{clbHomeRegisterBean.recoverPassword}" value="Recover" 
+							action="#{clbHomeRegisterBean.recoverPassword}" value="Recover"
 							ajax="true" update="@form"
 							onstart="document.body.style.cursor='wait'"
 							oncomplete="
-									document.body.style.cursor='default'
+									document.body.style.cursor='default';
 									if (!args.validationFailed){ 
 										if (args.cantRecoverPasswordNotFound=== true ){ 
 											PF('unSuccessPaneldoesnexistRecPassUnsuccess').show();
 										}
 										else if (args.timeNotPassedLastEmail === true ){ 
-											PF('unSuccessPaneltimeNotPassedLastEmail').show();
+											PF('unSuccessPaneltimeNotPassedLastEmailRecPass').show();
 										}
 										else PF('successPanelrecoverPass').show(); 
 									}"></p:commandButton>
@@ -60,6 +61,11 @@
 			<ui:param name="idUnsuccess" value="doesnexistRecPassUnsuccess" />
 			<ui:param name="unSuccessMessage"
 				value="User does not exist to recover Password!" />
+		</ui:include>
+		<ui:include src="unSuccessDialog.xhtml">
+			<ui:param name="idUnsuccess" value="timeNotPassedLastEmailRecPass" />
+			<ui:param name="unSuccessMessage"
+				value="Wait some time before send a new email" />
 		</ui:include>
 	</ui:define>
 </ui:composition>
