--- a/src/main/webapp/pages/analysis.xhtml
+++ b/src/main/webapp/pages/analysis.xhtml
@@ -14,40 +14,50 @@
 				<p:spacer height="20" />
 				<table width="100%" class="analysisDivClass">
 					<tr>
-						<td width="200px" class="analysisDivClassMainCell"><h:outputLabel
+						<td width="175px" class="analysisDivClassMainCell"><h:outputLabel
 								value="Analysis Menu"></h:outputLabel>
 							<hr /></td>
-						<td align="right">
-							<p:outputLabel value="Time Frame:" for="scaleList"></p:outputLabel>
-							<p:spacer width="5"></p:spacer> 
-							<p:calendar value="#{analysisBean.analysisDate}"></p:calendar>
-							<p:spacer width="25"></p:spacer> 
-							<p:outputLabel value="Scale:" for="scaleList"></p:outputLabel>
-							<p:spacer width="5"></p:spacer> 
-							<p:selectOneMenu id="scaleList" widgetVar="scaleList" value="#{analysisBean.scaleGraphic}">
-            					<f:selectItems value="#{analysisBean.scalesGraphic}" 
-            							var="analysisScale" itemValue="#{analysisScale}" itemLabel="#{analysisScale.label}"/>
-							</p:selectOneMenu>
-							<p:spacer width="10"></p:spacer> 
-							<p:spacer
-								width="30" /> <p:commandButton styleClass="simpleButton" value="Export"></p:commandButton>
-							<p:spacer width="10"/>
-						</td>
+						<td align="right"><p:outputLabel value="Time Frame:"
+								for="scaleList"></p:outputLabel> <p:spacer width="5"></p:spacer>
+							<p:calendar value="#{analysisBean.analysisDate}"
+								styleClass="timeFrame"></p:calendar> <p:spacer width="30"></p:spacer>
+							<p:outputLabel value="Scale:" for="scaleList"></p:outputLabel> <p:spacer
+								width="5"></p:spacer> <p:selectOneMenu id="scaleList"
+								widgetVar="scaleList" value="#{analysisBean.scaleGraphic}">
+								<f:selectItems value="#{analysisBean.scalesGraphic}"
+									var="analysisScale" itemValue="#{analysisScale}"
+									itemLabel="#{analysisScale.label}" />
+							</p:selectOneMenu> <p:spacer width="40" /> <p:commandButton
+								styleClass="simpleButton" value="Export"
+								icon="fa fa-fw fa-file-image-o" type="button">
+							</p:commandButton> <p:spacer width="10" /></td>
 					</tr>
 					<tr>
-						<td valign="top">
-							<p:selectOneMenu styleClass="selectOneMenuAnalysis" value="#{analysisBean.analysisType}">
-            					<f:selectItems value="#{analysisBean.analysisTypes}" 
-            							var="analysisTyp" itemValue="#{analysisTyp}" itemLabel="#{analysisTyp.label}"/>
-							</p:selectOneMenu>
-						</td>
-						<td valign="top" align="right">
-							<p:chart styleClass="analysisChartCSS" id="chartDayId" widgetVar="chartDayId" 
-								model="#{analysisBean.analysisBarDayPojo.lineModel}" type="line"/>
+						<td valign="top" width="175px"><p:selectOneMenu
+								styleClass="selectOneMenuAnalysis"
+								value="#{analysisBean.analysisType}">
+								<f:selectItems value="#{analysisBean.analysisTypes}"
+									var="analysisTyp" itemValue="#{analysisTyp}"
+									itemLabel="#{analysisTyp.label}" />
+							</p:selectOneMenu> <p:spacer height="20"></p:spacer> <p:commandButton
+								value="Building | Ritz" icon="fa fa-fw fa-building"
+								styleClass="menuAnalysisButton" /> <p:spacer height="5"></p:spacer>
+							<p:commandButton value="Meter | General"
+								icon="fa fa-fw fa-tachometer" styleClass="menuAnalysisButton" />
+							<p:spacer height="5"></p:spacer> <p:commandButton
+								value="Measure | Power (kW)" icon="fa fa-fw fa-database"
+								styleClass="menuAnalysisButton" /> <p:spacer height="5"></p:spacer>
+							<p:commandButton value="Saved" icon="fa fa-fw fa-save"
+								styleClass="menuAnalysisButton" /></td>
+						<td valign="top" align="right"><p:chart
+								styleClass="analysisChartCSS" id="chartDayId"
+								widgetVar="chartDayId"
+								model="#{analysisBean.analysisBarDayPojo.lineModel}" type="line" />
 						</td>
 					</tr>
 				</table>
 			</h:form>
 		</div>
+		<ui:include src="./general/footer.xhtml" />
 	</ui:define>
 </ui:composition>
